Project

General

Profile

Actions

Bug #17642

closed

Ractor should not allow "allocate" ("dup")

Bug #17642: Ractor should not allow "allocate" ("dup")

Added by ko1 (Koichi Sasada) over 5 years ago. Updated over 5 years ago.

Status:
Closed
Target version:
-
ruby -v:
ruby 3.1.0dev (2021-02-18T08:04:59Z master 07ab172ebe) [x86_64-linux]
[ruby-core:<unknown>]

Description

Ractor.new{}.dup
<internal:ractor>:700: [BUG] Segmentation fault at 0x000000000000025c
ruby 3.1.0dev (2021-02-18T08:04:59Z master 07ab172ebe) [x86_64-linux]

-- Control frame information -----------------------------------------------
c:0004 p:0003 s:0019 e:000018 METHOD <internal:ractor>:700 [FINISH]
c:0003 p:---- s:0011 e:000010 CFUNC  :p
c:0002 p:0017 s:0006 E:0009a0 EVAL   ../../src/clean/test.rb:1 [FINISH]
c:0001 p:0000 s:0003 E:001850 (none) [FINISH]

-- Ruby level backtrace information ----------------------------------------
../../src/clean/test.rb:1:in `<main>'
../../src/clean/test.rb:1:in `p'
<internal:ractor>:700:in `inspect'

-- Machine register context ------------------------------------------------
 RIP: 0x0000557caa457238 RBP: 0x0000557cac7a7d40 RSP: 0x00007ffc3c305168
 RAX: 0x0000000000000034 RBX: 0x00007fda64b7ff30 RCX: 0x0000557caa457230
 RDX: 0x0000000000000000 RDI: 0x0000557cac671c80 RSI: 0x0000557cac7bfec0
  R8: 0x00007fda64b7ff68  R9: 0x00007fda64a80100 R10: 0x0000557cac6b43a0
 R11: 0x0000000000000000 R12: 0x0000557caa666f60 R13: 0x0000557cac671c80
 R14: 0x0000557cac7a7d58 R15: 0x00007fda64b7ff30 EFL: 0x0000000000010246

-- C level backtrace information -------------------------------------------
/home/ko1/ruby/build/clean/miniruby(rb_print_backtrace+0x11) [0x557caa550a9e] ../../src/clean/vm_dump.c:758
/home/ko1/ruby/build/clean/miniruby(rb_vm_bugreport) ../../src/clean/vm_dump.c:1042
/home/ko1/ruby/build/clean/miniruby(rb_bug_for_fatal_signal+0xf4) [0x557caa35a444] ../../src/clean/error.c:801
/home/ko1/ruby/build/clean/miniruby(sigsegv+0x4d) [0x557caa4a711d] ../../src/clean/signal.c:960
/lib/x86_64-linux-gnu/libpthread.so.0(__restore_rt+0x0) [0x7fda654ba3c0] ../sysdeps/pthread/funlockfile.c:28
/home/ko1/ruby/build/clean/miniruby(builtin_inline_class_700+0x8) [0x557caa457238] ../../src/clean/ractor.rb:700
/home/ko1/ruby/build/clean/miniruby(vm_exec_core+0x31a7) [0x557caa538f87] ../../src/clean/vm_insnhelper.c:5578
/home/ko1/ruby/build/clean/miniruby(rb_vm_exec+0x1a4) [0x557caa53bb34] ../../src/clean/vm.c:2162
/home/ko1/ruby/build/clean/miniruby(vm_call0_body+0x552) [0x557caa540e42] ../../src/clean/vm_eval.c:178
/home/ko1/ruby/build/clean/miniruby(rb_funcallv+0x19c) [0x557caa543dfc] ../../src/clean/vm_eval.c:72
...
Actions

Also available in: PDF Atom