Ractor.allocate should not be allowed

Ractor.allocate and Ractor#dup should not be allowed like Thread.
[Bug #17642]